Fix password eye breaking on mobile issue

--- a/app/assets/stylesheets/kylas_engine/application.scss
+++ b/app/assets/stylesheets/kylas_engine/application.scss
@@ -32,3 +32,8 @@ body {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
+
+.password-box {
+  flex: auto;
+  width: min-content;
+}
